--- a/style/main.scss
+++ b/style/main.scss
@@ -30,6 +30,8 @@
     --container-md: 28rem;
     --container-lg: 32rem;
     --container-xl: 36rem;
+    --text-xs: 0.75rem;
+    --text-xs--line-height: calc(1 / 0.75);
     --text-sm: 0.875rem;
     --text-sm--line-height: calc(1.25 / 0.875);
     --text-lg: 1.125rem;
@@ -2116,9 +2118,6 @@
   .w-4 {
     width: calc(var(--spacing) * 4);
   }
-  .w-4\/5 {
-    width: calc(4/5 * 100%);
-  }
   .w-5\/6 {
     width: calc(5/6 * 100%);
   }
@@ -2155,11 +2154,11 @@
   .w-80 {
     width: calc(var(--spacing) * 80);
   }
+  .w-86 {
+    width: calc(var(--spacing) * 86);
+  }
   .w-96 {
     width: calc(var(--spacing) * 96);
-  }
-  .w-128 {
-    width: var(--spacing-128);
   }
   .w-fit {
     width: fit-content;
@@ -2254,9 +2253,6 @@
   }
   .flex-col {
     flex-direction: column;
-  }
-  .content-center {
-    align-content: center;
   }
   .content-start {
     align-content: flex-start;
@@ -2690,6 +2686,10 @@
     font-size: var(--text-xl);
     line-height: var(--tw-leading, var(--text-xl--line-height));
   }
+  .text-xs {
+    font-size: var(--text-xs);
+    line-height: var(--tw-leading, var(--text-xs--line-height));
+  }
   .leading-none {
     --tw-leading: 1;
     line-height: 1;
@@ -3025,14 +3025,14 @@
       width: calc(var(--spacing) * 44);
     }
   }
+  .\32 xl\:w-128 {
+    @media (width >= 96rem) {
+      width: var(--spacing-128);
+    }
+  }
   .\32 xl\:grid-cols-4 {
     @media (width >= 96rem) {
       grid-template-columns: repeat(4, minmax(0, 1fr));
-    }
-  }
-  .\32 xl\:justify-center {
-    @media (width >= 96rem) {
-      justify-content: center;
     }
   }
   .\32 xl\:justify-start {
@@ -3058,6 +3058,11 @@
   .\32 xl\:p-1 {
     @media (width >= 96rem) {
       padding: calc(var(--spacing) * 1);
+    }
+  }
+  .\32 xl\:p-2 {
+    @media (width >= 96rem) {
+      padding: calc(var(--spacing) * 2);
     }
   }
   .\32 xl\:px-3 {
@@ -3089,6 +3094,12 @@
     @media (width >= 96rem) {
       font-size: var(--text-4xl);
       line-height: var(--tw-leading, var(--text-4xl--line-height));
+    }
+  }
+  .\32 xl\:text-sm {
+    @media (width >= 96rem) {
+      font-size: var(--text-sm);
+      line-height: var(--tw-leading, var(--text-sm--line-height));
     }
   }
 }
@@ -3426,6 +3437,10 @@
     @media (width >= 96rem) {
       width: calc(var(--spacing) * 5);
     }
+  }
+  .editor-button-size {
+    height: calc(var(--spacing) * 4);
+    width: calc(var(--spacing) * 4);
   }
 }
 .spoiler-checkbox:checked + .spoiler-text {
